--- a/client/src/components/pages/Posts/Posts.scss
+++ b/client/src/components/pages/Posts/Posts.scss
@@ -1,4 +1,5 @@
 .posts {
+  padding-top: calc(58px + 1.5em);
   max-width: 80vw;
   margin: 0 auto;
 }
